--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "start": "node server.js"
   },
   "devDependencies": {
     "vite": "^7.2.4"
   },
   "dependencies": {
     "dat.gui": "^0.7.9",
+    "express": "^4.21.2",
     "gsap": "^3.14.1",
     "three": "^0.182.0"
   }
